--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <body>
 
 <div class="container">
-    <h2>Kalkulator Simpanan KWSP (Detail)</h2>
+    <h2>Kalkulator Simpanan KWSP (Detail) by PokMang Kumang</h2>
     
     <div class="grid-inputs">
         <div class="input-box">
