--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkulator KWSP Detail - Setiap Tahun</title>
+    <title>Kalkulator KWSP Detail - Pokmang Kumang</title>
     <style>
         :root {
             --primary: #1e3a8a;
